# hotspotstoplight_climate

CLIMADA/: hazard.csv  hazards_overview.ipynb
data/src/: script.py  test.ipynb  urban_heat.ipynb
drought/: README.md  pyproject.toml
flood_mapping/: .env  .gitignore  GCLOUD_SETUP.md  README.md  ROADMAP.md  SETUP.md  flood_extents.ipynb  hotspotstoplight-22806b7fd7a3.json  http_cache.sqlite  pyproject.toml
flood_mapping/data/config/: config.py
flood_mapping/data/inputs/argentina_aoi/geoBoundaries-ARG-ADM0-all/: geoBoundaries-ARG-ADM0-metaData.json  geoBoundaries-ARG-ADM0-metaData.txt  geoBoundaries-ARG-ADM0.dbf  geoBoundaries-ARG-ADM0.geojson  geoBoundaries-ARG-ADM0.topojson  geoBoundaries-ARG-ADM0_simplified.topojson
flood_mapping/data/inputs/argentina_flood_dates/: public_emdat_custom_request_2024-02-09_092341d2-99a8-4dea-95aa-7cb0984cb9e9.xlsx
flood_mapping/data/inputs/san_jose_aoi/: resourceshedbb_CostaRica_SanJose.geojson
flood_mapping/data/inputs/solomon_islands_aoi/geoBoundaries-SLB-ADM0-all/: geoBoundaries-SLB-ADM0-metaData.json  geoBoundaries-SLB-ADM0-metaData.txt  geoBoundaries-SLB-ADM0.dbf  geoBoundaries-SLB-ADM0.geojson  geoBoundaries-SLB-ADM0.topojson  geoBoundaries-SLB-ADM0_simplified.topojson
flood_mapping/data/src/: arg_script.py  basic_gpm_model.ipynb  cr_script.py  final_script.py  http_cache.sqlite  script.ipynb  script.py  test.ipynb
flood_mapping/data/src/data_utils/: export_and_monitor.py  exposure_and_vulnerability.py  filter_emdat.py  flood_extents.py  make_data_to_classify.py  make_training_data.py  monitor_tasks.py  new_train_and_eval.py  process_all_data.py  pygeoboundaries.py  read_from_cloud.py  test.ipynb  train_and_eval.py  write_to_cloud.py
flood_mapping/data/src/notebooks/: quick_cog_viz.ipynb  restee_test.ipynb  san_jose_dl.ipynb  test.ipynb  test2.ipynb  torchgeo_test.ipynb
flood_mapping/exports/: san_jose_flood_100m_2023_10_05.tif  san_jose_flood_probabilities.tif
flood_mapping/scratch/: flood_classification.ipynb  flood_extents.ipynb  urban_conditions.ipynb
heat_island/: README.md  heat_two.ipynb  http_cache.sqlite  pyproject.toml  urban_heat.ipynb
heat_island/scratch/: heat_two.ipynb
landslides/: README.md  pyproject.toml
pop_vulnerability/: SETUP.md  http_cache.sqlite  pyproject.toml
wildfire/: .gitignore  test-hello.py
(+41 files in other folders)
