[tool.poetry]
name = "flood_mapping"
version = "0.1.0"
description = "Flood mapping + prediction for HotspotStoplight project"
authors = ["Nissim Lebovits"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"  # Specify the desired Python version here
geemap = "^0.29.6"
wxee = "^0.4.1"

# Issue between poetry and tensorflow metadata since >=2.11
# This is a temporary workaround
# related to https://github.com/python-poetry/poetry/issues/8271
# Inspired from https://github.com/tensorflow/tensorflow/blob/adb39b04e9cb116df4659a7e2de9eea27e62f25c/tensorflow/tools/pip_package/setup.py#L148-L162
tensorflow = {version = "^2.13.0" }
tensorflow-macos = { version = "^2.13.0", platform = "darwin", markers = "platform_machine=='arm64'" }
tensorflow-intel = { version = "^2.13.0", platform = "win32" }
tensorflow-cpu = [
    { version = "^2.13.0", platform = "linux", markers = "platform_machine!='arm64' and platform_machine!='aarch64'" },
    { version = "^2.13.0", platform = "darwin", markers = "platform_machine!='arm64' and platform_machine!='aarch64'" },
]
tensorflow-cpu-aws = { version = "^2.13.0", platform = "linux", markers = "platform_machine=='arm64' or platform_machine=='aarch64'" }
# https://github.com/tensorflow/tensorflow/blob/adb39b04e9cb116df4659a7e2de9eea27e62f25c/tensorflow/tools/pip_package/setup.py#L107-L108
# https://github.com/python-poetry/poetry/issues/8271#issuecomment-1697740447
tensorflow-io-gcs-filesystem = [
    { version = ">= 0.23.1", markers = "platform_machine!='arm64' or platform_system!='Darwin'" },
    { version = "< 0.32.0", markers = "platform_system == 'Windows'" }
]
ipykernel = "^6.27.1"
gdown = "^4.7.1"
folium = "^0.15.1"
pyproj = "^3.6.1"
rio-cogeo = "^5.1.1"
earthengine-api = "^0.1.388"
openpyxl = "^3.1.2"
pygeoboundaries = "^0.0.2"
geopandas = "^0.14.3"
geojson = "^3.1.0"
requests-cache = "^1.1.1"
colorcet = "^3.0.1"
matplotlib = "^3.8.2"
holoviews = "^1.18.2"
xarray = "^2024.1.1"
xee = "^0.0.8"
fuzzywuzzy = "^0.18.0"
python-levenshtein = "^0.25.0"
pretty-errors = "^1.2.25"
black = "^24.3.0"
pre-commit = "^3.6.2"
scikit-learn = "^1.4.1.post1"
rasterio = "^1.3.9"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
